update to fixed thread pool cause using virtual threads not making it...
Signed-off-by: see-quick <maros.orsak159@gmail.com>